--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
     "version": 2,
+    "functions": {
+      "index.js": {
+        "maxDuration": 30 
+      }
+    },
     "builds": [
       {
-        "src": "index.js", 
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
